Project

General

Profile

Actions

Bug #48963

closed

valgrind errors when protected_fixedsize_stack is used for coroutines

Added by Yuval Lifshitz over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
valgrind
Backport:
pacific, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

teuthology is showing errors on rgw::notify::Manager. but issue was verified on standalone code here: https://github.com/yuvalif/test_spawn
also mentioned in boost's documentation: https://www.boost.org/doc/libs/1_75_0/libs/coroutine2/doc/html/coroutine2/stack/valgrind.html


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #49059: octopus: valgrind errors when protected_fixedsize_stack is used for coroutinesRejectedYuval LifshitzActions
Copied to rgw - Backport #49060: pacific: valgrind errors when protected_fixedsize_stack is used for coroutinesResolvedCasey BodleyActions
Actions #1

Updated by Yuval Lifshitz over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 39025
Actions #2

Updated by Casey Bodley over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 3 years ago

  • Copied to Backport #49059: octopus: valgrind errors when protected_fixedsize_stack is used for coroutines added
Actions #4

Updated by Backport Bot over 3 years ago

  • Copied to Backport #49060: pacific: valgrind errors when protected_fixedsize_stack is used for coroutines added
Actions #5

Updated by Casey Bodley over 3 years ago

  • Status changed from Pending Backport to In Progress
Actions #7

Updated by Casey Bodley over 3 years ago

  • Status changed from In Progress to Pending Backport
Actions #8

Updated by Yuval Lifshitz about 3 years ago

this should only be backported to pacific. "octopus" does not have persistent notifications.

Actions #9

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF