rgw: fix valgrind errors when protected_fixedsize_stack is used

Fixes: https://tracker.ceph.com/issues/48963

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit 76d4030cfeaeb4d2db39a5bd2dada09edffc8cca)

Conflicts:
	src/rgw/rgw_notify.cc with DoutPrefixProvider