src/rgw/rgw_notify.cc
@@ -6,6 +6,7 @@
 #include "cls/lock/cls_lock_client.h"
 #include <memory>
 #include <boost/algorithm/hex.hpp>
+#include <boost/context/protected_fixedsize_stack.hpp>
 #include <spawn/spawn.hpp>
 #include "rgw_pubsub.h"
 #include "rgw_pubsub_push.h"
@@ -45,6 +46,11 @@ struct event_entry_t {
 WRITE_CLASS_ENCODER(event_entry_t)
 
 using queues_t = std::set<std::string>;
+
+// use mmap/mprotect to allocate 128k coroutine stacks
+auto make_stack_allocator() {
+  return boost::context::protected_fixedsize_stack{128*1024};
+}
 
 class Manager {
   const size_t max_queue_size;
@@ -227,7 +233,7 @@ class Manager {
     // start a the cleanup coroutine for the queue
     spawn::spawn(io_context, [this, queue_name](spawn::yield_context yield) {
             cleanup_queue(queue_name, yield);
-            });
+            }, make_stack_allocator());
     
     while (true) {
       // if queue was empty the last time, sleep for idle timeout
@@ -314,7 +320,7 @@ class Manager {
               ldout(cct, 20) << "INFO: processing of entry: " << 
                 entry.marker << " (" << entry_idx << "/" << total_entries << ") from: " << queue_name << " failed" << dendl;
             } 
-        });
+        }, make_stack_allocator());
         ++entry_idx;
       }
 
@@ -433,7 +439,7 @@ class Manager {
             std::lock_guard lock_guard(queue_gc_lock);
             queue_gc.push_back(queue_name);
             ldout(cct, 10) << "INFO: queue: " << queue_name << " marked for removal" << dendl;
-          });
+          }, make_stack_allocator());
         } else {
           ldout(cct, 20) << "INFO: queue: " << queue_name << " ownership (lock) renewed" << dendl;
         }
@@ -478,7 +484,7 @@ public:
     {
       spawn::spawn(io_context, [this](spawn::yield_context yield) {
             process_queues(yield);
-          });
+          }, make_stack_allocator());
 
       // start the worker threads to do the actual queue processing
       const std::string WORKER_THREAD_NAME = "notif-worker";
